# pdm-playground

./: .pdm-python  README.md  pyproject.toml
src/cli/: __main__.py
