[project]
name = "pdmctl"
version = "1.0.2-rc101"
description = ""
authors = [
    {name = "Lionel TSAMBA", email = "lionel.tsamba.externe@swisslife.fr"},
]
dependencies = [
    "tomli>=2.0.1",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
pdmctl = "cli.__main__:main"


[tool.pdm]
plugins = [
    "pdm-version==2.0.0"
]
[tool.pdm.dev-dependencies]
lint = [
    "ruff>=0.0.291",
    "black>=23.9.1",
]
